tests/valid/test_array_73.wyal
assert "index out of bounds (not less than length)":
    forall(int[] arr2, int[] arr1, int i, int[] arr2$3, int[] arr2$2):
        if:
            arr1 == [1, 2, 64]
            arr2 == arr1
            arr2$2 == arr1[2:=i]
            arr2$3 == arr2$2
        then:
            2 < |arr2$3|

