tests/invalid/test_029.wyal
function main() -> ()

assert "type invariant not satisfied":
    if:
        true
    then:
        [1, 2, 4] is int[]


assert "type invariant not satisfied":
    forall(int[] arr1):
        if:
            arr1 == [1, 2, 4]
        then:
            arr1 is int[]


assert "type invariant not satisfied":
    forall(int[] arr2, int[] arr1):
        if:
            arr1 == [1, 2, 4]
            arr2 == arr1
        then:
            3 is int


assert "index out of bounds (negative)":
    forall(int[] arr2, int[] arr1):
        if:
            arr1 == [1, 2, 4]
            arr2 == arr1
        then:
            2 >= 0


assert "index out of bounds (not less than length)":
    forall(int[] arr2, int[] arr1):
        if:
            arr1 == [1, 2, 4]
            arr2 == arr1
        then:
            2 < |arr2|


assert "index out of bounds (negative)":
    forall(int[] arr2$1, int[] arr2, int[] arr1):
assert:
    forall(int[] arr3, int[] arr2, int[] arr1):
        if:
            arr1 == [1, 2, 4]
            arr2 == arr1
            arr3 == arr2[2:=3]
        then:
            arr3[2] != |arr1|
